Update Class Estoque